<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JW stand отчет</string>
    <string name="db_name">"jw_stand_report.sqlite3"</string>
    <string name="db_version">"1"</string>


    <string name="user">"Фамилия и Имя"</string>
    <string name="date">"Дата служения"</string>
    <string name="time">"Время служения"</string>
    <string name="from">"С:"</string>
    <string name="to">"До:"</string>
    <string name="location">"Точка служения"</string>
    <string name="journals">"Журналы"</string>
    <string name="broshures">"Брошюры"</string>
    <string name="books">"Книги"</string>
    <string name="dvd">"DVD"</string>
    <string name="talks">"Беседы"</string>
    <string name="repeated_visits">"Повторные посещения"</string>
    <string name="blank">"S43"</string>
    <string name="profile">"Ваш профиль"</string>
    <string name="meeting">"Собрание"</string>
    <string name="settings">"Настройки"</string>

    <string name="send_data">Данные для отправки отчета</string>
    <string name="sms">"Номер телефона - получателя"</string>
    <string name="email">"E-mail получателя"</string>

    <string name="exit">"Выход"</string>
    <string name="statistic">"Статистика"</string>

    <string name="first_run_title">"Первый запуск программы"</string>
    <string name="first_run_text">"Это ваш первый запуск программы. Пожалуйста сначало настройте программу!"</string>

    <string name="sms_send">"СМС отправлено!"</string>
    <string name="unknown_problems">"Неизвестная ошибка"</string>
    <string name="modul_is_down">"Ваш телефон выключен!"</string>

    <string name="vrong">"Вы заполнили не все данные!"</string>
    <string name="sms_vrong">"Не корректный номер телефона"</string>
    <string name="email_vrong">"Не корректный e-mail"</string>
    <string name="sms_sending">"Отправка СМС"</string>
    <string name="email_sending">"Отправка E-mail"</string>
    <string name="sms_count">"Будет отправленно смс в количестве:"</string>
    <string name="send_settings">"Настройка отправки"</string>
    <string name="send_type">"Способ отправки"</string>

    <string name="type_sms">"СМС"</string>
    <string name="type_email">"E-mail"</string>

    <string name="statistic_write">"Сохранить данные для статистики?"</string>

    <string-array name="send_report">
        <item>"Только через СМС"</item>
        <item>"Только через e-mail"</item>
        <item>"Всегда спрашивать"</item>
    </string-array>

    <string-array name="send_report_value">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
    </string-array>


</resources>
