<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.pp.dimoshka.jwp.main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/statistic"
        android:icon="@drawable/ic_action_action_trending_up"
        app:showAsAction="ifRoom"
        android:title="@string/statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_action_settings"
        app:showAsAction="always"
        android:title="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item
        android:id="@+id/exit"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="never"
        android:title="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</menu>