<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MyActivity"
        android:background="@android:color/background_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/user"
            android:id="@+id/textView1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|italic" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/user"
            android:layout_below="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/date"
            android:id="@+id/textView2"
            android:layout_below="@+id/user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|italic"
            android:layout_marginTop="@dimen/line_margin" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/t_date"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/line_margin"
            android:gravity="center"
            android:text="0000-00-00"
            android:padding="@dimen/line_margin"
            android:background="@drawable/bt_green" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time"
            android:id="@+id/textView3"
            android:layout_below="@+id/t_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|italic"
            android:layout_marginTop="@dimen/line_margin" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout1"
            android:paddingTop="@dimen/line_margin"
            android:paddingBottom="@dimen/line_margin"
            android:layout_marginTop="@dimen/line_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/from"
                android:id="@+id/textView4"
                android:textColor="@android:color/darker_gray"
                android:padding="@dimen/line_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_start"
                android:layout_weight="1"
                android:editable="false"
                android:text="00:00"
                android:gravity="center"
                android:background="@drawable/bt_green"
                android:padding="@dimen/line_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/to"
                android:id="@+id/textView5"
                android:textColor="@android:color/darker_gray"
                android:padding="@dimen/line_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_end"
                android:layout_weight="1"
                android:editable="false"
                android:text="00:00"
                android:gravity="center"
                android:background="@drawable/bt_green"
                android:padding="@dimen/line_margin" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/location"
            android:id="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|italic"
            android:layout_below="@+id/LinearLayout1"
            android:layout_marginTop="@dimen/line_margin" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout2"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/journals"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textStyle="bold|italic" />


            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down1" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/journals"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout3"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/broshures"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textStyle="bold|italic" />


            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down2" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/broshure"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout4"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/books"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textStyle="bold|italic" />


            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down3" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/books"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout5"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dvd"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textStyle="bold|italic" />


            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down4" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/dvd"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up4" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout6"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/talks"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textStyle="bold|italic" />


            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down5" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/talks"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up5" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout7"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeated_visits"
                android:id="@+id/textView12"
                android:layout_weight="1"
                android:textStyle="bold|italic" />


            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down6" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/repeated_visits"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up6" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/LinearLayout8"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:id="@+id/textView13"
                android:layout_weight="1"
                android:textStyle="bold|italic" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button_down7" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/s43"
                android:text="0"
                android:inputType="number"
                android:gravity="center" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/button_up7" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Отправить"
            android:layout_below="@+id/LinearLayout8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/send"
            style="@style/button_blue"
            android:layout_marginTop="@dimen/line_margin" />


    </RelativeLayout>
</ScrollView>
